fixed image overlap issue

--- a/cssFiles/bg_style.css
+++ b/cssFiles/bg_style.css
@@ -401,8 +401,8 @@ h1.titleText {
     
     .card .cardContent {
         margin: 20px 25px 30px 25px;
-        height: 380px;
-        width: 270px;
+        height: 390px;
+        width: 280px;
     }
 }
 
@@ -480,6 +480,8 @@ body::-webkit-scrollbar-thumb
 
 p.lastLine{
     color: #6a6767;
+    width: 95%;
+    text-align: center;
 }
 
 .footTitle3{
