--- a/cssFiles/popup_slider.css
+++ b/cssFiles/popup_slider.css
@@ -222,7 +222,6 @@
         width: 72%;
     }
 
-
     .slider .box .details h1 {
         font-size: 45px;
     }
@@ -262,12 +261,13 @@
 
     .slider .illustration {
         position: relative;
-        top: 50px;
+        top: 0px;
     }
 
     .slider .illustration div {
         height: 10rem;
-        width: 14rem;
+        /* width: 14rem; */
+        width: 150%;
     }
 
     .slider .illustration a {
@@ -296,7 +296,7 @@
 @media (max-width: 600px) {
     .slider .illustration {
         position: relative;
-        top: -85px;
+        top: 0px;
     }
 
     .EveName {
@@ -354,12 +354,18 @@
         padding: 75px 70px 130px 70px;
     }
 
+    #popup a {
+        padding: 10px 20px;
+        margin-top: 24px;
+        background-color: white;
+    }
+
 }
 
 @media (max-width: 520px) {
     .slider .illustration {
         position: relative;
-        top: -70px;
+        top: 0px;
     }
 
     .prev,
@@ -372,13 +378,13 @@
     }
 
     .slider .box .details h1 {
-        font-size: 35px;
+        font-size: 32px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
 
     .slider .box .details p {
-        font-size: 19px;
+        font-size: 17px;
         margin-right: 0;
         margin-bottom: 1rem;
 
@@ -388,13 +394,13 @@
 @media (max-width: 450px) {
     .slider .illustration {
         position: relative;
-        top: -50px;
+        top: 0px;
     }
 }
 
 @media (max-width: 400px) {
     .slider .illustration {
         position: relative;
-        top: -30px;
+        top: 0px;
     }
 }
